# ad-kafka-interface

./: .gitlab-ci.yml
.ci-local/: ad-kafka-interface_install.sh  adkafkainterface_install.sh  adurl_hook.sh  adviewers_install.sh  area_detector_hook.sh  asyn_hook.sh  kafka-console-consumer.bat  kafka-create-topic.bat  kafka-del-topic.bat  kafka-del-topics.sh  kafka-describe-topics.bat  kafka_install.sh  settings.bat  settings.sh  stable.set
.ci-local/Scripts/: kafka-server-start.bat  settings.bat  settings.sh  start_epics  zookeeper-server-start.bat
ADKafka/: ADKafka.sln
ADKafka/ADKafkaApp/: ADKafka.vcxproj  ADKafka.vcxproj.filters
ADKafka/ADKafkaApp/src/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaDriver.cpp  Makefile
ADKafka/configure/: RELEASE
ADKafka/iocs/ADKafkaIOC/ADKafkaApp/: ADKafkaApp.vcxproj  ADKafkaApp.vcxproj.filters
ADKafka/iocs/ADKafkaIOC/ADKafkaApp/src/: Makefile
ADKafka/iocs/ADKafkaIOC/configure/: RELEASE
ADKafka/iocs/ADKafkaIOC/iocBoot/iocADKafka/: st.cmd  start_epics
ADPluginKafka/: ADPluginKafka.sln  ADPluginKafka_README.md  CMakeLists.txt  README.md  common.vcxproj  conanfile.txt
ADPluginKafka/ADPluginKafkaApp/: ADPluginKafka.vcxproj  ADPluginKafka.vcxproj.filters
ADPluginKafka/ADPluginKafkaApp/Db/: ADPluginKafka.template
ADPluginKafka/ADPluginKafkaApp/src/: ADArray_schema_generated.h  KafkaPlugin.cpp  KafkaPlugin.h  KafkaProducer.cpp  KafkaProducer.h  Makefile  NDArraySerializer.cpp  NDArraySerializer.h  Parameter.cpp  Parameter.h  ParameterHandler.cpp  ParameterHandler.h  TimeUtility.cpp  TimeUtility.h
ADPluginKafka/configure/: RELEASE
ADPluginKafka/iocs/ADPluginKafkaIOC/ADPluginKafkaApp/: ADPluginKafkaApp.vcxproj  ADPluginKafkaApp.vcxproj.filters
ADPluginKafka/iocs/ADPluginKafkaIOC/ADPluginKafkaApp/src/: Makefile
ADPluginKafka/iocs/ADPluginKafkaIOC/configure/: RELEASE
ADPluginKafka/iocs/ADPluginKafkaIOC/iocBoot/iocADPluginKafka/: Makefile  settings.sh  st.cmd  start_epics
ADPluginKafka/startup/: ADPluginKafka_demo.cmd
ADPluginKafka/unit_tests/: CMakeLists.txt  GenerateNDArray.cpp  KafkaPluginTest.cpp  KafkaProducerTest.cpp  NDArrayDeSerializer.cpp  NDArrayDeSerializer.h  NDArraySerializerTest.cpp  NDPluginDriverStandIn.cpp  NDPluginDriverStandIn.h  ParamaterTest.cpp  ParameterHandlerTest.cpp  someADArray.data
configure/: RELEASE  RELEASE.local
startup/: ADPluginKafka_demo.cmd
